test/sema/typeck/module/class-method-not-accessible.dora
fn f(x: foo::Foo) { x.bar(); }
mod foo {
    pub class Foo
    impl Foo { fn bar() {} }
}

//====================
// error: element is not accessible.
// --> class-method-not-accessible.dora:1:21
//  | fn f(x: foo::Foo) { x.bar(); }
//                        ~~~~~~~
//  | mod foo {
//  |     pub class Foo
// 1 error found.
